<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="back">Назад</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="writeToSupport">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="urlToCourse" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="email" translatable="false">avlagab@yandex.ru</string>
    <string name="topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageBody">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="cover">Обложка</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="trackAdded">Трек добавлен</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="_0_tracks">0 треков</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name">Название*</string>
    <string name="label_newPlaylistFragment">NewPlaylistFragment</string>

    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="playlist">Плейлист</string>
    <string name="my_playlists">my_playlists</string>
    <string name="created">создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added">Добавлено в плейлист  %1$s</string>
    <string name="already_added">Трек уже добавлен в плейлист  %1$s</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>

    <plurals name="tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="share_playlist">Поделиться</string>
    <string name="information">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <string name="empty_track_list">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="settings_not_found_app">Не найдено подходящих приложений</string>
</resources>