<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout">

    <LinearLayout
        style="@style/layoutUp">


    <TextView
        android:text="@string/settings"
        style="@style/header"/>
    </LinearLayout>

   <FrameLayout
       android:id="@+id/switchLayout"
        style="@style/settingRow">


       <com.google.android.material.switchmaterial.SwitchMaterial
           android:id="@+id/themeSwitcher"
           style="@style/settingSwitch"
           android:text="@string/darkTheme"
           android:layout_gravity="start"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/buttonShare"
        style="@style/settingRow">
        <TextView
            android:text="@string/shareApp"
            style="@style/settingRowText"/>

        <ImageView
            style="@style/settingRowImage"
            android:contentDescription="@string/shareApp"
            android:src="@drawable/icon_share"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/buttonSupport"
        style="@style/settingRow">
        <TextView
            android:text="@string/writeToSupport"
            style="@style/settingRowText"/>

        <ImageView
            style="@style/settingRowImage"
            android:contentDescription="@string/writeToSupport"
            android:src="@drawable/icon_support"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/buttonAgreement"
        style="@style/settingRow">
        <TextView
            android:text="@string/agreement"
            style="@style/settingRowText"/>

        <ImageView
            style="@style/settingRowImage"
            android:contentDescription="@string/agreement"
            android:src="@drawable/icon_forward"/>
    </FrameLayout>
</LinearLayout>
