<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backGround">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSizeMenu"
        android:layout_marginTop="@dimen/marginTopBottom"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/mainMargin"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/marginTopBottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSearch"
            android:layout_marginBottom="@dimen/marginTopBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColorLink="@color/black"
            android:text="@string/search"
            android:textSize="@dimen/fontSizeMenu"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconGravity="textStart"
            app:icon="@drawable/icon_magnifier"
            app:iconSize="@dimen/iconSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:iconTint="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMedia"
            android:layout_marginBottom="@dimen/marginTopBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColorLink="@color/black"
            android:text="@string/media"
            android:textSize="@dimen/fontSizeMenu"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconGravity="textStart"
            app:icon="@drawable/icon_sign"
            app:iconSize="@dimen/iconSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:iconTint="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            android:layout_marginBottom="@dimen/mainMargin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColorLink="@color/black"
            android:text="@string/settings"
            android:textSize="@dimen/fontSizeMenu"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconGravity="textStart"
            app:icon="@drawable/icon_gear"
            app:iconSize="@dimen/iconSize"
            app:cornerRadius="@dimen/cornerRadius"
            app:iconTint="@color/black"/>

    </LinearLayout>
</LinearLayout>